--- a/index.html
+++ b/index.html
@@ -4,9 +4,82 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + TS</title>
+    <style>
+        #log {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            max-height: 150px;
+            overflow-y: scroll;
+            background-color: rgba(0, 0, 0, 0.8);
+            color: white;
+            font-family: monospace;
+            padding: 10px;
+            box-sizing: border-box;
+        }
+        .log-entry {
+            margin-bottom: 5px;
+        }
+        .log-entry.log {
+            color: white;
+        }
+        .log-entry.error {
+            color: red;
+        }
+  </style>
   </head>
   <body>
     <canvas id="renderCanvas" style="width: 100%; height: 100%;"></canvas>
+    <div id="log"></div>
+
     <script type="module" src="/src/index.ts"></script>
+    <script>
+      function logMessage(message, type = 'log') {
+            const logDiv = document.getElementById('log');
+            const newLogEntry = document.createElement('div');
+            newLogEntry.className = 'log-entry ' + type;
+            newLogEntry.textContent = message;
+            logDiv.appendChild(newLogEntry);
+            logDiv.scrollTop = logDiv.scrollHeight;  // Auto-scroll to the bottom
+        }
+
+        // Override console.log and console.error to capture logs and errors
+        console.log = (function (oldLog) {
+            return function (message) {
+                oldLog.apply(console, arguments);
+                logMessage(message, 'log');
+            };
+        }(console.log));
+
+        console.error = (function (oldError) {
+            return function (message) {
+                oldError.apply(console, arguments);
+                logMessage(stringifyError(message), 'error');
+            };
+        }(console.error));
+        window.onerror=(e,source,lineno,colno,error)=>{
+    console.log("tart console")
+    console.error("tart error")
+    console.error(JSON.stringify(e),source,lineno,colno,error)
+}
+        // Catch unhandled promise rejections
+        window.addEventListener("unhandledrejection", (e) => {
+            console.log("--------------")
+            console.error("error: " +  stringifyError(e.reason.message));
+            console.error("stack: " +  stringifyError(e.reason.stack));
+        });
+       // Helper function to properly stringify error objects
+       function stringifyError(error) {
+            if (error instanceof Error) {
+                return JSON.stringify({
+                    message: error.message,
+                    stack: error.stack
+                });
+            }
+            return JSON.stringify(error);
+        }
+
+
+    </script>
   </body>
 </html>
